--- a/style.css
+++ b/style.css
@@ -30,3 +30,22 @@ input {
 input#submit{
   width: 50px;
 }
+
+
+#test > div {
+  background-color: blue;
+  width: 40px;
+  height: 40px;
+  font-size: 14px;
+  border: 1px solid navy;
+  padding: 5px;
+}
+
+#test > div.show {
+  background-color: cyan;
+}
+
+#test {
+  display: grid;
+  grid-template-columns: 55px 55px 55px 55px;
+}
