--- a/docs/grodevstyle.css
+++ b/docs/grodevstyle.css
@@ -27,25 +27,20 @@ li button:hover {
   background-color: silver;
 }
 
-.column {
-  float: left;
-}
-
 .column.left {
-  width: 40%;
-  padding: 10px;
+  width: 80%;
+  padding: 1px;
 }
 
 .column.right {
-  width: 55%;
+  width: 100%;
+  max-width: 500px;
 }
 
-/* Clear floats after the columns */
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
+.row {
+  width: 100%
 }
+
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width:600px) {
